# raftcpp

./: .gitmodules  CMakeLists.txt  LICENSE  NanoLog.hpp  README.md  common.h  cond.h  consensus.hpp  entity.h  log.hpp  main.cpp  mem_log.hpp  message_bus.hpp  node.hpp  nodes.hpp  raft_server.hpp  raft_server1.hpp  raftcpp.vcxproj  raftcpp.vcxproj.filters  state_machine.h  timer.hpp
case1/: case1.vcxproj  case1.vcxproj.filters  client.h  common.h  main.cpp  net_config.json
client/client/: client.vcxproj  common.h  entity.h  main.cpp
conf/: peers.conf
docs/: init_election_pseudocode.cpp  meeting_record.md  raft开发日志.md  raft算法.md  选举流程.md
